small code updates
first steps

update meataheader plings

add donation button

add donation button

add donation button

donation

donation

donation

donation

donation

menulabel fix

update project rating null user background

Donation

donation

dnoation

donation

donation

donation

donation

donation

donation

donation

donation

donation

donation

donation

donate

donate

donation

donation

show description in explore

show description in backend

show description backend

show description in backend

donate

supporter badge

show description in backend

donation

show desc in backend

suppporter badge & pling-list popup

suppporter badge & pling-list popup

show description in backend

support

support

suppporter badge

support

support

support

support button

support btn

support btn

support btn

support btn

support btn

support btn

support btn

support btn

support btn

support btn

Paypal IPN saving

bugfix supports in comments

paypal ipn

stati

updated stored procedure

small code updates

updated admin backend for categories

support fix & backend stati

admin functions on product page doesn't update the "changed_at" value in db table

merge dev branch

develop tag system

add tags for product

test payout

pling-list popup

payout

payout

stati

stati

Updated page for tags in the backend

add tags for product

add tags for product

add tags for product

--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -93,6 +93,15 @@
             </div>
         </div>
         <div class="jtable-input-field-container">
+            <div class="jtable-input-label">Show Description</div>
+            <div class="jtable-input jtable-dropdown-input">
+                <select id="show_description" name="show_description" class="validate[required]">
+                    <option value="1">Show</option>
+                    <option selected="selected" value="0">Don't show</option>
+                </select>
+            </div>
+        </div>
+        <div class="jtable-input-field-container">
             <div class="jtable-input-label">Status</div>
             <div class="jtable-input jtable-dropdown-input">
                 <select id="subcat-status" name="is_active" class="validate[required]">
@@ -405,7 +414,13 @@
                     type: 'input',
                     create: true,
                     edit: true,
-                    width: '30%'
+                    width: '5%'
+                },
+                show_description: {
+                	title: 'Show Description',
+                    options: {'1': 'Show', '0': 'Do not show'},
+                    defaultValue: '0',
+                    width: '5%'
                 },
                 is_active: {
                     title: 'Status',
