--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -53,7 +53,10 @@
     <script src="/theme/flatui/js/lib/html5shiv.js"></script>
     <![endif]-->
 
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script
+            src="http://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
     
@@ -97,7 +100,10 @@
 <script src="/theme/flatui/js/lib/bootstrap-dialog.min.js"></script>
 <script src="/theme/flatui/js/lib/masonry.pkgd.min.js"></script>
 
-<script src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
+<script
+        src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+        integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+        crossorigin="anonymous"></script>
 <script src="/theme/flatui/js/lib/jquery.colorbox-min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.placeholder.min.js"></script>
 <script src="/theme/flatui/js/lib/jquery.form.min.js"></script>
