--- a/application/modules/default/views/scripts/product/search.phtml
+++ b/application/modules/default/views/scripts/product/search.phtml
@@ -1,5 +1,5 @@
 <?php
-$param = array('q' => $this->searchText ,'page' => $this->page, 'count' => 10);
+$param = array('q' => $this->searchText ,'page' => $this->page, 'count' => 10, 'qf' => $this->searchField);
 $modelSearch = new Default_Model_Solr();
 try {
     $this->result = $modelSearch->search($param);
