--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -428,7 +428,17 @@ ul.meta-nav-top
               height: 30px;
               width: 30px;
               margin-top: -15px;
-          
+              .supporter-badge{
+                  position: absolute;
+                  right: 0px;
+                  bottom: 0px;
+                  background: blue;
+                  text-align: center;
+                  border-radius: 30px 30px 30px 30px;
+                  color: #fff;
+                  padding: 5px 10px;
+                  font-size: 12px;
+              }
               img {
                 height: 30px;
                 width: 30px;
@@ -1299,18 +1309,35 @@ ul.meta-nav-top
         .explore-product-details {
           padding-left: 20px;
           
-          h3 {
-           
+          h3 {           
             font-size: 24px;            
             font-weight: bold;
             color: #2673b0;
             span.version
             {
               font-size: smaller; 
-              padding-left: 20px;
+              padding-left: 20px
             }
           }
-         
+          .title{
+            display: block;
+            margin-bottom: 8px;
+            .username{
+                padding-left: 20px;
+            }
+          }
+          .description{
+            display: block;
+            margin-bottom: 8px;
+          }
+          .packagetypes{
+            display: block;
+            float: left;
+            .packagetypeos{
+              width: 100px;
+              float: left;
+            }
+          }
           .productInfo
           {
             clear: left;
@@ -1797,6 +1824,17 @@ span.page-views {
 
         .product-maker-thumbnail {
           float: right;
+          .supporter-badge{
+              position: absolute;
+              right: 0px;
+              bottom: 0px;
+              background: blue;
+              text-align: center;
+             border-radius: 15px 15px 15px 15px;
+             color: #fff;
+             padding: 2px 5px;
+             font-size: 10px;
+          }
         }
 
         .product-maker-summary {
@@ -2607,6 +2645,7 @@ span.page-views {
               position: absolute;
               top: 1em;
               left: 1em;
+              display:inline-block;
               .border_radius(999px);
 
               img {
@@ -2614,6 +2653,18 @@ span.page-views {
                 height: 100%;
                 .border_radius(999px);
               }
+            }
+
+            .supporter-badge{
+                position: absolute;
+                right: 0px;
+                bottom: 0px;
+                background: blue;
+                text-align: center;
+                border-radius: 30px 30px 30px 30px;
+                color: #fff;
+                padding: 5px 10px;
+                font-size: 16px;
             }
 
             h1 {
@@ -5326,10 +5377,12 @@ img.imgpopover
 
 /** plings **/
 
-main#plings-page{
+main#plings-page{  
   .wrapper{
        width:450px;        
        padding:20px;
+       max-height: 700px;
+       overflow: auto;
        .title{
           background-color:#ccc; 
           height: 30px;
@@ -5342,6 +5395,10 @@ main#plings-page{
         background-color: #eef; 
       }
       
+     .depth0 {
+           padding-left: 0px;
+      }
+
     .depth1 {
            padding-left: 20px;
       }
@@ -5494,11 +5551,7 @@ main#plings-page{
              
         }
       
-        .packagetypeos
-        {
-          width: 100px;
-          float: left;
-        }
+        
         .explore-product-image{
            
            /*
